--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
+
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -33,6 +37,27 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
-		</dependency>   
+		</dependency>
+		
+  <dependency>
+    		<groupId>info.cukes</groupId>
+    		<artifactId>cucumber-java</artifactId>
+    		<version>1.2.5</version>
+	</dependency>
+	
+	<dependency>
+    		<groupId>info.cukes</groupId>
+    		<artifactId>cucumber-jvm-deps</artifactId>
+    		<version>1.0.5</version>
+    		<scope>provided</scope>
+	</dependency>
+	
+	<dependency>
+	    <groupId>info.cukes</groupId>
+	    <artifactId>cucumber-junit</artifactId>
+	    <version>1.2.5</version>
+	    <scope>test</scope>
+	</dependency>
+	   
   </dependencies>
 </project>
